--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-httpx==0.26.0
-redis==5.0.1
-anthropic==0.8.1
-beautifulsoup4==4.12.3
-lxml==5.1.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+httpx==0.25.1
+pydantic==2.4.2
 python-dotenv==1.0.0
+redis==5.0.1
+anthropic==0.7.1
+beautifulsoup4==4.12.2
+feedparser==6.0.10
 aiofiles==23.2.1
+python-multipart==0.0.6
+lxml==4.9.3
